manifests/cluster-addons/technitium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium
  namespace: technitium
spec:
  replicas: 1
  revisionHistoryLimit: 5
  template:
    spec:
      containers:
        - name: technitium
          image: technitium/dns-server:15.2.0@sha256:23d3b63d959e997800b095fe93009b3fae271b5258234ff2ade8535cb33682c8
          ports:
            - name: http-ui
              containerPort: 5380
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-quic
              containerPort: 853
              protocol: UDP
            - name: dns-tls
              containerPort: 853
              protocol: TCP
            - name: dns-https-3
              containerPort: 443
              protocol: UDP
            - name: dns-https-1-2
              containerPort: 443
              protocol: TCP
            - name: dns-http-1
              containerPort: 80
              protocol: TCP
            - name: dns-http-2
              containerPort: 8053
              protocol: TCP
            - name: dhcp
              containerPort: 67
              protocol: UDP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: config
              mountPath: /etc/dns
            - name: logs
              mountPath: /var/log/technitium/dns
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config
          # persistentVolumeClaim:
          #   claimName: technitium-config
          emptyDir: {}
        - name: logs
          emptyDir: {}
