manifests/cluster-addons/technitium/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: technitium
  namespace: technitium
spec:
  serviceName: technitium
  replicas: 3
  revisionHistoryLimit: 5
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: technitium
              topologyKey: bakseter.net/physical-node
      containers:
        - name: technitium
          image: technitium/dns-server:15.5.1@sha256:b8efe03a5e3bdc6e9d2baff3f6e70c382c7f98afa2a7ca66f318d4b58a8d5944
          ports:
            - name: console-http
              containerPort: 5380
              protocol: TCP
            - name: console-https
              containerPort: 53443
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 30
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: config
              mountPath: /etc/dns
            - name: tmp
              mountPath: /tmp
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: config
      # NOTE: metadata.labels are immutable, so these were applied manually
      #   labels:
      #     recurring-job.longhorn.io/source: enabled
      #     recurring-job-group.longhorn.io/hetzner-backup: enabled
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 1Gi
