manifests/cluster-addons/technitium/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-tailscale
  namespace: technitium
  annotations:
    tailscale.com/hostname: dns
    tailscale.com/proxy-group: technitium
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-lan
  namespace: technitium
  labels:
    l2-announce: 'true'
spec:
  type: LoadBalancer
  ports:
    - name: console-http
      port: 5380
      targetPort: 5380
      protocol: TCP
    - name: console-https
      port: 53443
      targetPort: 53443
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-ui
  namespace: technitium
spec:
  ports:
    - name: console-http
      port: 5380
      targetPort: 5380
