manifests/cluster-addons/technitium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-ui
  namespace: technitium
spec:
  ports:
    - name: http-ui
      port: 5380
      targetPort: 5380
      protocol: TCP
