manifests/cluster-addons/technitium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium
  namespace: technitium
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-int
      namespace: tailscale

  hostnames:
    - technitium.int.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: technitium-primary
          port: 5380
