manifests/cluster-addons/technitium/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: technitium
  namespace: technitium
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: technitium
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
            - port: '53443'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: technitium
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: external-dns
            app.kubernetes.io/instance: external-dns
            app.kubernetes.io/name: technitium
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
      toPorts:
        - ports:
            - port: '5380'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: technitium
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
            - port: '53443'
              protocol: TCP

    - toCIDR:
        - 1.1.1.1/32
        - 8.8.8.8/32
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toCIDR:
        - 1.1.1.1/32
        - 8.8.8.8/32
      icmps:
        - fields:
            - type: '8'

    - toFQDNs:
        - matchName: 'cdn.jsdelivr.net' # block rules
        - matchName: 'jsdelivr.map.fastly.net' # block rules
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
